// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ?OpenAgent setup                                                                                 │
│                                                                                                  │
│  How do you want to run models? (default: free / open-source / local)                            │
│                                                                                                  │
│  (selected) Free / open-source / loca(not selected) Gemini  (not selected) Sign (not selected)   │
│  models (OpenRouter, Groq, NVIDIA,   API Key (Gemini models in with Google      Vertex AI        │
│  Ollama, …)                          only)                  (optional)          (optional)       │
│                                                                                                  │
│  Something went wrong                                                                            │
│                                                                                                  │
│  (Enter to select · use --byok or /models to add API keys)                                       │
│                                                                                                  │
│  Tip: Ollama and OpenRouter free models need no Google account.                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ?OpenAgent setup                                                                                 │
│                                                                                                  │
│  How do you want to run models? (default: free / open-source / local)                            │
│                                                                                                  │
│  (selected) Free / open-source / loca(not selected) Gemini  (not selected) Sign (not selected)   │
│  models (OpenRouter, Groq, NVIDIA,   API Key (Gemini models in with Google      Vertex AI        │
│  Ollama, …)                          only)                  (optional)          (optional)       │
│                                                                                                  │
│  (Enter to select · use --byok or /models to add API keys)                                       │
│                                                                                                  │
│  Tip: Ollama and OpenRouter free models need no Google account.                                  │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with enforced auth type 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ? OpenAgent setup                                                                                │
│                                                                                                  │
│   How do you want to run models? (default: free / open-source / local)                           │
│                                                                                                  │
│   (selected) Gemini API Key (Gemini models only)                                                 │
│                                                                                                  │
│   (Enter to select · use --byok or /models to add API keys)                                      │
│                                                                                                  │
│   Tip: Ollama and OpenRouter free models need no Google account.                                 │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
